# deep_quant2

./: .gitignore  README.md  USAGE.md  pyproject.toml
cli/: __init__.py  main.py
conf/: example_strategy.yaml  volume_spike_msft.yaml  volume_spike_optimize.yaml  volume_spike_tsla_opt.yaml  volumn_spike_tsla.yaml
core/: __init__.py  backtest.py
docs/: MCP_INTEGRATION.md  PRD.md
indicator/: __init__.py  fractals.py  local_peak_trough.py  volume_spike.py  zig_zag.py
mcp_server/: __init__.py  jobs.py  schemas.py  server.py
openspec/: project.md
openspec/changes/archive/2025-12-29-add-backtest-engine-spec/: proposal.md  tasks.md
openspec/specs/backtest-engine/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/configuration-system/: spec.md
openspec/specs/data-layer/: spec.md
openspec/specs/expression-system/: spec.md
openspec/specs/output-analysis/: spec.md
openspec/specs/strategy-framework/: spec.md
strategies/: ExampleStrategy.yaml  VolumeSpikeBasedStrategy.yaml
strategy/: __init__.py  base.py  factory.py  trigger_system.py
strategy/expression/: __init__.py  base_evaluator.py  base_parser.py  condition_evaluator.py  condition_parser.py  expression_evaluator.py  expression_parser.py  expression_tokenizer.py
tests/: __init__.py  test_cache.py  test_condition_evaluator.py  test_config.py  test_expression_evaluator.py  test_parameters.py  test_strategy_factory.py  test_trigger_system.py
utils/: analysis_utils.py  bt_utils.py  cache_index.py  config.py  parameters.py  yf_utils.py
(+17 files in other folders)
